syntax = "proto3";

package alert_rule;

option go_package = "alert_rule";

message SourceRequest {
  string sourceName = 1;
  string sourceType = 2;
  string mark = 3;
  string address = 4;
  string sign = 5;
}